snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2.pom.sha512
ebc9d640284a75eb538a40f5577fac1447d47fc44ccbbe49e50f4bfd05b3e93d43341575de747e90c617c1e57018d76b43d31ef0cb143f35e98f503f91980507